[package]
name = "trip-mapper"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.34-deprecated"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "gzip", "blocking", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1"
open = "5"

[[bin]]
name = "trip-mapper"
path = "main.rs"
